# MyNotes

./: .gitignore  README.md
Angular/: angular.txt  component.ts
HTML/: index.html  script.js
Python/: static.py
Python/dataclasses/: dataclass.py  readme.md
Python/multithreading/: multi.py
Python/saarthi/: 01-Numbers.ipynb  02-Strings.ipynb
React/: index.html  package.json  pnpm-lock.yaml
React/hooks/: useImperativeHandle.md  useReducer.md  useRef.md
React/react-vite-template/: .env.staging  .eslintrc.json  package.json  tsconfig.json  vite.config.ts
Rust/: cargo.toml
Rust/actix_poc/: Cargo.toml  Justfile  config.dev.toml  readme.md
Rust/actix_poc/api_test/: main.http
Rust/actix_poc/migrations/2025-03-11-041900_enums/: down.sql  up.sql
Rust/actix_poc/migrations/2025-03-11-161211_merchant_account/: down.sql  up.sql
Rust/actix_poc/src/: config.rs  database.rs  main.rs  schema.rs
Rust/actix_poc/src/common/: api_error.rs  mod.rs
Rust/actix_poc/src/common/secret/: mod.rs  secret.md
Rust/actix_poc/src/db_models/: merchant_account_db.rs  mod.rs
Rust/actix_poc/src/router/: merchant_account_routes.rs  mod.rs
Rust/actix_poc/src/services/: merchant_account_services.rs  mod.rs
backend/grpc/: Cargo.toml  build.rs
backend/grpc/proto/: payments.proto
backend/grpc/src/: client.rs
design pattern/: package.json  tsconfig.json
git/: git.md
javascript/: basic.js  datatype.js  package.json  test.js  tsconfig.json
reactApps/: package.json  pnpm-lock.yaml
redis/: 1.0intro.md  2.0persisting.md  clustering.md  redis_handbook.md
rescript/: assignment.js  assignment.res  bsconfig.json  commands.md  package-lock.json  package.json
system design/: ssl_tls.md
system_design_problems/rate_limiter/: Cargo.toml
system_design_problems/rate_limiter/src/: main.rs  rate_limiter.rs
system_design_problems/rate_limiter/src/rate_limiter/: fixed_window.rs  sliding_window_counter.rs
(+305 files in other folders)
