[package]
name = "actix_poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
actix-web = "4"
anyhow = "1.0.97"
diesel = { version = "2.2.8", features = [
    "postgres",
    "r2d2",
    "chrono",
    "serde_json",
] }
r2d2 = "0.8.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.8.20"
ulid = "1.2.0"
zeroize = { version = "1.8.1", features = ["serde", "derive"] }
