[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name ="payments-server"
path="src/server.rs"

[[bin]]
name="payments-client"
path="src/client.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic="0.7"
prost="0.10"
tokio={version = "*",features = ["macros","rt-multi-thread"]}

[build-dependencies]
tonic-build="0.7"