[package]
name = "rate_limiter"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
serde_json = "1.0"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
lazy_static = "1.4"                                                           # Or your chosen router library
path-tree = "0.1"
